<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context=".Controller.GameActivity">

    <com.example.sudoku.View.SudokuBoardView
        android:id="@+id/sudokuView"
        android:layout_width="wrap_content"
        android:layout_height="320dp" />

    <LinearLayout
        android:id="@+id/numbers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp">

        <Button
            android:id="@+id/oneButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/one" />

        <Button
            android:id="@+id/twoButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/two"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/threeButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/three"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/fourButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/four"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/fiveButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/five"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/sixButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/six"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/sevenButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/seven"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/eightButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/eight"
            android:layout_weight="1"/>

        <Button
            android:id="@+id/nineButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/nine"
            android:layout_weight="1"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="20dp"
        android:layout_gravity="center">

        <Button
            android:id="@+id/rules"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/seeRules" />

        <Button
            android:id="@+id/erase"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/erase" />
    </LinearLayout>
</LinearLayout>
